# ec2

./: .gitignore  Cargo.toml  README.md  default.nix  devbox.json  ec2.js  flake.nix  go.mod  go.sum  main.go  package-lock.json  package.json
src/: main.rs
