[package]
name = "ec2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
tokio = { version = "1", features = ["full"] }
rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_credential = "0.47.0"

# Security updates
mio = "0.8.11"
shlex = "1.3.0"
h2 = "0.3.26"
